Fixed gap

--- a/src/pages/Events/style.scss
+++ b/src/pages/Events/style.scss
@@ -30,6 +30,7 @@
   .container {
     display: flex;
     padding: 0;
+    margin-bottom: 10%;
     flex-direction: column;
     gap: 30px;
     .eventbody {
